--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "latest",
+    "bootstrap-vue": "^2.19.0",
+    "css-loader": "^5.0.1",
     "vue": "^2.6.12",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.4.9"
